# oregpt

./: .pre-commit-config.yaml  LICENSE  README.md  config.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main.yml
oregpt/: chat_bot.py  command.py  main.py  stdinout.py
oregpt/resources/: config.yml
tests/: conftest.py  test_chat_bot.py  test_command.py
