[tool.poetry]
name = "oregpt"
version = "0.1.0"
description = ""
authors = ["Shinichi Takayanagi <shinichi.takayanagi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.6"
pyyaml = "^6.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"


[tool.poetry.group.lint.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# === Black ===
[tool.black]
line-length = 120
include = '\.pyi?$'
extend-exclude = '''
/(
  | dist
  | .pytest_cache
  | .tox
  | docs
  | docs_src
  | .venv
  | .mypy_cache
)/
'''

# === Isort ===
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_glob = []


# === Pytest ===
[tool.pytest.ini_options]
norecursedirs = ["venv", ".venv", ".env"]
testpaths = [
    "tests",
]
console_output_style = "progress"
log_cli = true

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
no_site_packages = true
show_error_codes = true
strict_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = [
  "tests",
]
